--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
         integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/styles.css"/>
-    <title>Index</title>
+    <title>K-Chess</title>
     {% block head %}{% endblock %}
 </head>
     <body>
