--- a/templates/game_stream.html
+++ b/templates/game_stream.html
@@ -1,7 +1,7 @@
-<!-- templates/stream.html -->
+<!-- templates/game_stream.html -->
 
 <!-- Using hx-swap here will still allow us to swap into the inner element, despite not having any triggers -->
-<div hx-sse="connect:/todos/stream swap:message" hx-swap="beforeend">
+<div hx-sse="connect:/games/stream swap:message" hx-swap="beforeend">
 
 </div>
 
