--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Shuttle Todos</h1>
-<form id="add-form">
-    <input placeholder="Your todo description..." required type=text name="description">
-    <button hx-post="/todos" hx-trigger="click" hx-target="#todos-content" hx-swap="beforeend">Add</button>
-</form>
-<div id="list" hx-get="/todos" hx-target="this" hx-trigger="load" hx-swap="outerHTML">
-    Loading...
-</div>
+<h1>Board</h1>
+    <button hx-post="/games" hx-trigger="click" hx-target="#gameContent" hx-swap="outerHTML" id="newGameButton">New Game</button>
+	<div id="gameContent">
+    		<!-- New game content will be loaded here -->
+		<!-- It will listen for updates to a game with an id it knows -->
+	</div>
 {% endblock %}
 
