feat: comprehensive board views

--- a/templates/games.html
+++ b/templates/games.html
@@ -5,6 +5,8 @@
         <tr>
             <th>ID</th>
             <th>Status</th>
+            <th>Outcome</th>
+            <th>Winner</th>
         </tr>
     </thead>
     <tbody id="games-content">
