--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,9 @@
-<!-- templates/base.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script src="https://unpkg.com/htmx.org@1.9.6"
-        integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni"
-        crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/htmx.org@2.0.0-alpha1/dist/htmx.min.js"></script>
+    <!-- TODO: replace with hosted version -->
+    <script src="/static/js/sse.js"></script>
     <link rel="stylesheet" href="/static/styles.css"/>
     <title>K-Chess</title>
     {% block head %}{% endblock %}
